# disease-simulations

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  buildAndExecute.sh  cmake_install.cmake  compilerAndExecute.sh  createRecording.sh  disease_simulations  disease_simulations.cbp  setup.sh
code/main/headers/gui/: WindowHandler.h
code/main/headers/infection/: Infection.h
code/main/headers/location/: Location.h
code/main/headers/math/: InfectionSpreadCalculator.h  SweepPruneAlgorithm.h
code/main/headers/math/utils/: MathematicalUtils.h
code/main/headers/simulations/: RandomWalkSimulation.h
code/main/headers/subjectData/: Grid.h  HealthStatus.h  Location.h  Subject.h
code/main/headers/subjects/: Subject.h
code/main/headers/utils/: ConfigUtils.h  GridUtils.h  RandomNumberGeneratorUtils.h
code/main/src/: main.cpp
code/main/src/gui/: WindowHandler.cpp
code/main/src/infection/: Infection.cpp
code/main/src/location/: Location.cpp
code/main/src/math/: InfectionSpreadCalculator.cpp  SweepPruneAlgorithm.cpp
code/main/src/math/utils/: MathematicalUtils.cpp
code/main/src/simulations/: RandomWalkSimulation.cpp
code/main/src/subjectData/: Grid.cpp  Grid.h  HealthStatus.cpp  Location.cpp  Subject.cpp
code/main/src/subjects/: Subject.cpp
code/main/src/utils/: ConfigUtils.cpp  GridUtils.cpp  RandomNumberGeneratorUtils.cpp
code/main/src/window/: WindowHandler.cpp  WindowHandler.h
scripts/: buildAndExecute.sh  createRecording.sh
